workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/CarenciaGarantia__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre as garantias e as carências</description>
    <label>Carência da garantia</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carências da garantia</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>