workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/fields/Carencia__c.field-meta.xml
<CustomField>
    <fullName>Carencia__c</fullName>
    <label>Carência</label>
    <referenceTo>Carencia__c</referenceTo>
    <relationshipName>CarenciasCobertura</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>