workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/fields/CarenciaGarantia__c.field-meta.xml
<CustomField>
    <fullName>CarenciaGarantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carência da garantia</label>
    <referenceTo>CarenciaGarantia__c</referenceTo>
    <relationshipLabel>Carências da garantia</relationshipLabel>
    <relationshipName>CarenciasGarantia</relationshipName>
    <type>Lookup</type>
</CustomField>