workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/fields/FormaCarencia__c.field-meta.xml
<CustomField>
    <fullName>FormaCarencia__c</fullName>
    <label>Forma de carência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escalonada</fullName>
            </value>
            <value>
                <fullName>Simples</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>