workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/fields/PermiteAlterarProdutoComercial__c.field-meta.xml
<CustomField>
    <fullName>PermiteAlterarProdutoComercial__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Permite alterar no produto comercial</label>
    <type>Checkbox</type>
</CustomField>