workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/fields/TipoEmissao__c.field-meta.xml
<CustomField>
    <fullName>TipoEmissao__c</fullName>
    <label>Tipo de emissão</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seguro Novo</fullName>
            </value>
            <value>
                <fullName>Endosso</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>