workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/fields/ValorBase__c.field-meta.xml
<CustomField>
    <fullName>ValorBase__c</fullName>
    <label>Valor base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Salário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>