workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/recordTypes/ProdutoComercial.recordType-meta.xml
<RecordType>
    <fullName>ProdutoComercial</fullName>
    <active>true</active>
    <label>Produto comercial</label>
</RecordType>