workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/validationRules/BloquearCriacaoCarenciaGarantia.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearCriacaoCarenciaGarantia</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
					ISNEW(),
      ISBLANK(CarenciaGarantia__c),  
				 GarantiaProduto__r.RecordType.DeveloperName = &apos;ProdutoComercial&apos;
)</errorConditionFormula>
    <errorMessage>Não é possível criar uma Carência da Garantia de um Produto Comercial.</errorMessage>
</ValidationRule>