workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/validationRules/BloquearEdicaoCarenciaGarantia.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearEdicaoCarenciaGarantia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					NOT(ISNEW()),
				 RecordType.DeveloperName = &apos;ProdutoComercial&apos;
)</errorConditionFormula>
    <errorMessage>Não é possível editar uma Carência da Garantia de um Produto Comercial.</errorMessage>
</ValidationRule>