workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/validationRules/ValidarFormaCarenciaEscalonada.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarFormaCarenciaEscalonada</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(FormaCarencia__c, &apos;Escalonada&apos;),
OR(
ISBLANK(Carencia__r.InicioPeriodo__c),
ISBLANK(Carencia__r.FimPeriodo__c)
)
)</errorConditionFormula>
    <errorMessage>Os períodos inicial e final devem estar preenchidos na carência para esta forma de carência.</errorMessage>
</ValidationRule>