workspace-sf/force-app/main/default/objects/CarenciaGarantia__c/validationRules/ValidarFormaCarenciaSimples.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarFormaCarenciaSimples</fullName>
    <active>false</active>
    <description>Os períodos inicial e final devem estar preenchidos na carência para esta forma de carência.</description>
    <errorConditionFormula>AND(
ISPICKVAL(FormaCarencia__c, &apos;Simples&apos;),
ISBLANK(Carencia__r.InicioPeriodo__c)
)</errorConditionFormula>
    <errorMessage>O período inicial deve estar preenchido na carência para esta forma de carência.</errorMessage>
</ValidationRule>